// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea TextArea normal 1`] = `
<span>
  <textarea
    aria-describedby={null}
    aria-invalid="false"
    className="textArea base enabled normal"
    disabled={false}
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    rows={3}
  />
</span>
`;

exports[`TextArea TextArea with error 1`] = `
<span>
  <textarea
    aria-describedby={null}
    aria-invalid="true"
    className="textArea base enabled errored"
    disabled={false}
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    rows={3}
  />
  <div
    className="box marginTop2"
  >
    <div
      className="Text fontSize1 red alignLeft breakWord fontWeightNormal"
    >
      <span
        id="test-error"
      >
        error message
      </span>
    </div>
  </div>
</span>
`;

exports[`TextArea TextArea with hasError 1`] = `
<span>
  <textarea
    aria-describedby={null}
    aria-invalid="true"
    className="textArea base enabled errored"
    disabled={false}
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    rows={3}
  />
</span>
`;

exports[`TextArea TextArea with rows 1`] = `
<span>
  <textarea
    aria-describedby={null}
    aria-invalid="false"
    className="textArea base enabled normal"
    disabled={false}
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    rows={5}
  />
</span>
`;
